# openlex-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  README.de.md  README.md  ROADMAP.md  SECURITY.de.md  SECURITY.md  claude_desktop_config.json  compose.yml  pyproject.toml  server.json
.github/workflows/: ci.yml  live.yml  publish.yml
assets/: demo.html
audits/: profile.openlex-mcp.json  tracker.csv
audits/2026-05-29T052144-Z-openlex-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-05-29T052144-Z-openlex-mcp/findings/: ARCH-004-inversion-of-control-transport-agnostisc.md  ARCH-008-drei-primitive-nutzen-tools-resources-un.md  ARCH-011-standardisierte-repo-struktur-src-layout.md  ARCH-012-protocolversion-pinning-changelog-sdk-up.md  OBS-001-protocol-vs-execution-errors-korrekte-tr.md  OBS-002-mask-error-details-keine-stacktraces-sql.md  OBS-003-structured-logging-mit-rfc-5424-severity.md  OBS-006-opentelemetry-distributed-tracing-pro-to.md  OPS-001-test-strategie-unit-tests-mocked-live-te.md  OPS-003-phasenarchitektur-read-only-first-dann-w.md  SCALE-001-streamable-http-statt-stdio-f-r-cloud-de.md  SCALE-002-stateful-load-balancing-f-r-streamable-h.md  SCALE-003-mcp-session-id-routing-via-edge-lb-hapro.md  SCALE-004-containerization-mit-multi-stage-builds.md  SCALE-006-resource-limits-per-container-memory-cpu.md  SDK-001-fastmcp-lifespan-via-asynccontextmanager.md  SDK-002-pydantic-v2-typeddict-dataclass-als-tool.md  SDK-003-context-injection-f-r-progress-reports-u.md  SDK-004-cors-mcp-session-id-exposure-bei-http-ss.md  SEC-004-ssrf-prevention-https-enforcement-ip-blo.md  SEC-005-dns-rebinding-prevention-dns-pinning-geg.md  SEC-007-container-sandboxing-docker-chroot-mit-m.md  SEC-009-session-id-cryptographic-binding-user-id.md  SEC-013-api-key-storage-secret-manager-statt-pla.md  SEC-014-tool-allow-listing-via-mcp-gateway-patte.md  SEC-015-pre-flight-tool-poisoning-detection.md  SEC-016-0-0-0-0-binding-prevention-neighborjack.md  SEC-018-input-validation-an-tool-boundaries-pyda.md  SEC-019-lethal-trifecta-vermeiden-server-separat.md  SEC-021-egress-allow-list-code-layer-und-network.md  SEC-022-tool-hash-pinning-namespace-pr-fix-gegen.md
audits/2026-05-29T112502-Z-openlex-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-05-29T112502-Z-openlex-mcp/findings/: ARCH-002.md  OPS-001.md  SCALE-002.md  SCALE-003.md
docs/: network-egress.md  secret-management.md  tool-hashes.json
scripts/: gen_tool_hashes.py
src/openlex_mcp/: __init__.py  __main__.py  api_client.py  data_cache.py  law_parser.py  logging_config.py  net.py  responses.py  server.py
tests/: conftest.py  test_api_client.py  test_data_cache.py  test_law_parser.py  test_live.py  test_net.py  test_server.py
