[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "openlex-mcp"
version     = "0.1.0"
description = "MCP Server for Canton Zurich legislation — full-text search, article extraction, and education law tools via ZH-Lex and HuggingFace swiss_legislation dataset"
readme      = "README.md"
license     = "MIT"
requires-python = ">=3.11"
authors     = [{ name = "Hayal Oezkan" }]

keywords = [
    "mcp", "model-context-protocol", "swiss-open-data",
    "zurich-law", "zh-lex", "gesetzessammlung",
    "volksschulgesetz", "bildungsrecht", "schulrecht",
    "canton-zurich", "claude", "llm",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
openlex-mcp = "openlex_mcp.server:main"

[project.urls]
Homepage       = "https://github.com/malkreide/openlex-mcp"
Repository     = "https://github.com/malkreide/openlex-mcp"
Issues         = "https://github.com/malkreide/openlex-mcp/issues"
"Data Source"  = "https://www.zh.ch/de/politik-staat/gesetze-beschluesse/gesetzessammlung.html"

[tool.hatch.build.targets.wheel]
packages = ["src/openlex_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --tb=short"
markers      = [
    "live: live API tests (skipped in CI by default)",
]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
